<resources>
    <string name="app_name">SMB Project</string>
    <string name="exercise5_button_label">Ćwiczenie 5</string>
    <string name="exercise4_button_label">Ćwiczenie 4</string>
    <string name="exercise3_button_label">Ćwiczenie 3</string>
    <string name="exercise2_button_label">Ćwiczenie 2</string>
    <string name="exercise1_button_label">Ćwiczenie 1</string>
    <string name="choice_text_view">Wybierz ćwiczenie</string>
    <string name="list_first_exercise_button">Lista</string>
    <string name="options_first_exercise_button">Opcje</string>
    <string name="options_save">Zapisz</string>
    <string name="options_size_label">Rozmiar</string>
    <string name="options_color_label">Kolor</string>
    <string name="list_add_new_button">Dodaj</string>
    <string name="add_element_amount_label">Ilość</string>
    <string name="add_element_price_label">Cena</string>
    <string name="add_element_name_label">Nazwa</string>
    <string name="add_element_save_button">Zapisz</string>
    <string name="add_element_remove_button">Usuń</string>
    <string name="options_object_label">OBJECT</string>
    <string name="options_size_edit_text_hint">Podaj rozmiar</string>
    <string name="produkt">Produkt</string>
    <string name="cena">Cena</string>
    <string name="ilo">Ilość</string>
    <string name="kupione">Kupione?</string>
    <string name="sign_up_login">Login</string>
    <string name="sign_up_password">Hasło</string>
    <string name="sign_up_add_account">Zarejestruj</string>
    <string name="zaloguj_si">Zaloguj się</string>
    <string name="sign_in_button">Zaloguj się</string>

    <string-array name="options_spinner">
        <item>CZERWONY</item>
        <item>CZARNY</item>
        <item>SZARY</item>
        <item>BIAŁY</item>
        <item>ZIELONY</item>
        <item>NIEBIESKI</item>
        <item>ŻÓŁTY</item>
    </string-array>
    <string name="title_activity_maps">Ulubione sklepy</string>
    <string name="add_new_shop">Dodaj Sklep</string>
    <string name="shop_list">Lista Sklepów</string>
    <string name="shop_row_localization">Lokalizacja:</string>
    <string name="shop_row_radius">Promień</string>
    <string name="add_shop_description_label">Opis</string>
    <string name="add_shop_radius_label">Promień</string>

    <string name="hello_message">Jesteś w obszarze </string>
    <string name="goodbye_message">Jesteś poza obszarem </string>
    <string name="promo_message">Super promocja już dziś</string>


</resources>
