<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChoiseActivity">

    <TextView
        android:id="@+id/choice_textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:keepScreenOn="false"
        android:padding="5dp"
        android:text="@string/choice_text_view"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/exercise1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise1_button_label"
        android:onClick="onClickFirstExercise"/>

    <Button
        android:id="@+id/exercise2_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise2_button_label"
        android:onClick="onClickSecondExcercise"/>

    <Button
        android:id="@+id/exercise3_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise3_button_label"
        android:onClick="onClickThirdExcercise"/>

    <Button
        android:id="@+id/exercise4_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise4_button_label"
        android:onClick="onClickFourthExcercise"/>

    <Button
        android:id="@+id/exercise5_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise5_button_label"
        android:onClick="onClickFifthExcercise"/>
</LinearLayout>